updates on Inno Setup translations
git-svn-id: https://svn.r-project.org/R/trunk@50922 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/rw-FAQ.texi
+++ b/src/gnuwin32/rw-FAQ.texi
@@ -826,6 +826,7 @@ releasing the Alt key.
 
 Only a limited range of languages is supported (but still wider
 than those for which R has translations), currently
+Basque
 Brazilian Portuguese,
 Catalan,
 both Simplified and Traditional Chinese,
@@ -835,6 +836,7 @@ Dutch,
 Finnish,
 French,
 German,
+Hebrew
 Hungarian,
 Italian,
 Japanese,
@@ -843,6 +845,7 @@ Norwegian,
 Polish,
 Portuguese,
 Russian,
+Slovak,
 Slovenian
 and Spanish (Spain).
 
