it seems Windows does not support Basque
git-svn-id: https://svn.r-project.org/R/trunk@50924 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/rw-FAQ.texi
+++ b/src/gnuwin32/rw-FAQ.texi
@@ -826,7 +826,6 @@ releasing the Alt key.
 
 Only a limited range of languages is supported (but still wider
 than those for which R has translations), currently
-Basque
 Brazilian Portuguese,
 Catalan,
 both Simplified and Traditional Chinese,
@@ -836,7 +835,7 @@ Dutch,
 Finnish,
 French,
 German,
-Hebrew
+Hebrew,
 Hungarian,
 Italian,
 Japanese,
