--- a/src/gnuwin32/rw-FAQ.texi
+++ b/src/gnuwin32/rw-FAQ.texi
@@ -620,9 +620,9 @@ one user reported that the virtual screen manager JSP2 caused this
 crash.
 
 These errors are essentially impossible for us to fix or work around
-beyond the measures already taken (which were increased in R 2.3.0).
-The only solution we know of is for the user to replace the buggy system
-component that is causing the error.
+beyond the measures already taken.  The only solution we know of is for
+the user to replace the buggy system component that is causing the
+error.
 
 
 @node Why does R never use more than 50% of my CPU?, Does R run under Windows Vista?, Other strange crashes., Installation and Usage
@@ -732,11 +732,11 @@ running under Administrator privileges when updating those.
 @end itemize
 
 
-Another issue with Vista is that the standard POSIX ways that R uses
+Another issue with Vista was that the standard POSIX ways that R uses
 (e.g.@: in @code{file.info} and @code{file.access}) to look at file
 permissions no longer work reliably.  @code{file.access} was re-written
-for R 2.5.1 to work with Windows NT-based security and the new version
-seems much more reliable with Vista (but still not 100% correct).
+to work with Windows NT-based security and the new version seems much
+more reliable with Vista (but still not 100% correct).
 
 On suitably recent hardware Vista can prevent the execution of code
 from data areas via `Data Execution Prevention' (from a tab in
@@ -1429,12 +1429,12 @@ To build R on 32-bit Windows you will need the tools from
 others.  See the `R Installation and Administration' manual.
 
 To build a 64-bit version on 64-bit Windows you will need a suitable
-compiler, and experimental code to work with the Mingw64 port of
+compiler, and experimental support for the MinGW-w64 port of
 @code{binutils} and @code{gcc} has been added for the upcoming R 2.11.0.
-You are of course welcome to try a commercial compiler@footnote{such as
-those from Intel and PGI: there is no Fortran compiler in the Microsoft
-set, but @code{f2c} could be used.}, and pre-compiled versions using
-such compilers are available from R redistributors.
+You are welcome to try a commercial compiler@footnote{such as those from
+Intel and PGI: there is no Fortran compiler in the Microsoft set, but
+@code{f2c} could be used.}, and pre-compiled versions using such
+compilers are available from R redistributors.
 
 @node Can I use a fast BLAS?, How do I include compiled C code?, How can I compile R from source?, Building from Source
 @section  Can I use a fast BLAS?
