--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -4261,9 +4261,9 @@ suitably; ensure you have the required fonts installed.
 @section The Inno Setup installer
 
 To make the installer package (@file{@value{RWVERSION}-win32.exe}) we
-require Inno Setup 5.1.7 or later (including 5.3.x and the Unicode
-versions) from @uref{http://jrsoftware.org/}.  This is @emph{not}
-included in @file{Rtools.exe}.
+require Inno Setup 5.1.11 or later from @uref{http://jrsoftware.org/}.
+As of this writing, we use the Unicode version of 5.3.7, and we recommend at 
+least this version be used.  This is @emph{not} included in @file{Rtools.exe}.
 
 Edit file @file{src/gnuwin32/MkRules} and change @code{ISDIR} to the
 location where Inno Setup was installed.
