move to UTF-8 latex output
git-svn-id: https://svn.r-project.org/R/trunk@50964 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -226,7 +226,6 @@ NEW FEATURES
 	an error.
 
 
-
 DEPRECATED & DEFUNCT
 
     o	Bundles of packages are defunct.
@@ -243,6 +242,12 @@ DEPRECATED & DEFUNCT
 	exported and has a different argument list.
 
     o	Use of multiple arguments to return() is now defunct.
+
+
+INSTALLATION
+
+    o	UTF-8 is now used for the reference manual and package
+	manuals.  This requires LaTeX '2005/12/01' or later.
 
 
 BUG FIXES
