faster interaction(drop=T)
git-svn-id: https://svn.r-project.org/R/trunk@50968 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -225,6 +225,8 @@ NEW FEATURES
 	result.	 Unmatched values and "" are not allowed and result in
 	an error.
 
+    o	interaction(drop=TRUE) uses less memory (related to PR#14121).
+
 
 DEPRECATED & DEFUNCT
 
