callNextMethod was not detecting the subset case
git-svn-id: https://svn.r-project.org/R/trunk@50976 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -288,6 +288,7 @@ BUG FIXES
     o	Various ar() fitting methods have more protection for singular
 	fits.
 
+    o	callNextMethod now works again with the drop= argument in `[`
 
 
 
