add option checkPackageLicense
git-svn-id: https://svn.r-project.org/R/trunk@50977 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -227,6 +227,10 @@ NEW FEATURES
 
     o	interaction(drop=TRUE) uses less memory (related to PR#14121).
 
+    o	If option "checkPackageLicense" is set to TRUE (not currently
+	the default), users will be asked to agree to non-FOSS package
+	licences at first use.
+
 
 DEPRECATED & DEFUNCT
 
