--- a/NEWS
+++ b/NEWS
@@ -77,6 +77,9 @@ BUG FIXES
 	n > length(p), also when method differs from "bonferroni" or
 	"none", thanks to a patch from Gordon Smyth.
 
+    o	tcrossprod() wrongly failed in some cases, when one of the
+	arguments was a vector and the other a matrix.
+
 
 
 		CHANGES IN R VERSION 2.10.1
