setAs() with one missing class gives only message
git-svn-id: https://svn.r-project.org/R/trunk@51004 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -237,6 +237,9 @@ NEW FEATURES
 	the default), users will be asked to agree to
 	non-known-to-be-FOSS package licences at first use.
 
+    o	Checking setAs(a,b) methods only gives a message instead of a
+	warning, when one of a or b is unknown.
+
 
 DEPRECATED & DEFUNCT
 
