port r51007 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@51009 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -83,6 +83,10 @@ BUG FIXES
     o	det(m) and determinant.matrix(m) now return NaN when m
 	contains NA or NaN's in crucial entries.
 
+    o	[cr]bind(..., deparse.level=2) was not always giving names
+	when documented to do so.  (Discovered whilst investigating
+	PR#14189.)
+
 
 
 		CHANGES IN R VERSION 2.10.1
