Clean up process creation code in Windows.
git-svn-id: https://svn.r-project.org/R/trunk@51015 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -55,6 +55,9 @@ BUG FIXES
     o	Some of the MDI toolbar buttons (e.g. "Open Script") did not
 	return the focus to the console if the user cancelled the
 	action.
+	
+    o	system() (and hence shell()) did not set the standard file
+    	handles properly, so some programs would not run.
 
 
 
