--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -35,7 +35,8 @@ NEW FEATURES
 	(Suggested by Henrik Bengtsson.) 
 
     o	It is possible to build for 64-bit Windows (set WIN=64 in
-	MkRules), thanks in part to changes suggested by Yu Gong.
+	MkRules and read the R-admin manual for the tools required),
+	thanks in part to changes suggested by Yu Gong.
 
 
 
