--- a/NEWS
+++ b/NEWS
@@ -393,7 +393,7 @@ BUG FIXES
     	if iconv() (incorrectly) converted them to different ASCII
     	characters.  (Seen on Windows only.)
 
-    o	tcrossprod() wrongly failed in some cases, when one of the
+    o	tcrossprod() wrongly failed in some cases when one of the
 	arguments was a vector and the other a matrix.
 
     o	det(m) and determinant.matrix(m) now return NaN when m
@@ -402,6 +402,8 @@ BUG FIXES
     o	[cr]bind(..., deparse.level=2) was not always giving names
 	when documented to do so.  (Discovered whilst investigating
 	PR#14189.)
+
+    o	match(incomparables=<non-NULL>) could in rare cases infinite-loop.
 
 
 
