port r51020 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@51021 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -80,7 +80,7 @@ BUG FIXES
     o	tools::showNonASCII() failed to detect non-ASCII characters
     	if iconv() converted them to ASCII.
 
-    o	tcrossprod() wrongly failed in some cases, when one of the
+    o	tcrossprod() wrongly failed in some cases when one of the
 	arguments was a vector and the other a matrix.
 
     o	det(m) and determinant.matrix(m) now return NaN when m
@@ -89,6 +89,8 @@ BUG FIXES
     o	[cr]bind(..., deparse.level=2) was not always giving names
 	when documented to do so.  (Discovered whilst investigating
 	PR#14189.)
+
+    o	match(incomparables=<non-NULL>) could in rare cases infinite-loop.
 
 
 
