--- a/NEWS
+++ b/NEWS
@@ -30,6 +30,9 @@ NEW FEATURES
 	and example conversion removed the escapes but HTML conversion
 	did not.
 
+    o	The PCRE library has been updated to version 8.01, a bug-fix
+	release.
+
 
 BUG FIXES
 
@@ -69,9 +72,10 @@ BUG FIXES
     o	sprintf() was not re-entrant, which potentially caused problems
 	if an as.character() method called it.
 
-    o	Quartz device did not restore clipping region when filling
-	background for a new page. This could be observed in
-	multi-page bitmap output as stale outer regions of the plot.
+    o	The quartz() device did not restore the clipping region when
+	filling the background for a new page.  This could be observed
+	in multi-page bitmap output as stale outer regions of the
+	plot.
 
     o	p.adjust(*, method, n)	now works correctly for the rare case
 	n > length(p), also when method differs from "bonferroni" or
