all arch-specific startup files
git-svn-id: https://svn.r-project.org/R/trunk@51028 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -240,8 +240,11 @@ NEW FEATURES
     o	Checking setAs(a,b) methods only gives a message instead of a
 	warning, when one of a or b is unknown.
 
-    o	New norm() to compute matrix norm.
-	norm() and backsolve() also have implicit generics now.
+    o	New function norm() to compute a matrix norm.
+	norm() and also backsolve() have implicit S4 generics.
+
+    o	Renviron.site and Rprofile.site can have architecture-specific
+	versions on systems with sub-architectures.
 
 
 DEPRECATED & DEFUNCT
