Fix handling of user breaks when running external commands in Windows.
git-svn-id: https://svn.r-project.org/R/trunk@51030 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -37,6 +37,12 @@ NEW FEATURES
     o	It is possible to build for 64-bit Windows (set WIN=64 in
 	MkRules and read the R-admin manual for the tools required),
 	thanks in part to changes suggested by Yu Gong.
+	
+
+BUG FIXES
+
+    o	Using ESC to interrupt a system() call could cause R to become
+	unstable.
 
 
 
